数据同步测试修改数据错误